# dualsense_bluetooth

./: CMakeLists.txt  Makefile  README.md  build-and-run.sh  compile.sh  main.cpp  ps5-controller-full  ps5-kontroller  ps5_kontroller  ps5_sensor_receiver.maxpat  test.cpp  testing-for-sensor-data
